# cgal-qt-demos

./: .gitignore  CMakeLists.txt  ConvexHull.h  ConvexHullGraphicsItem.h  Intersection.h  IntersectionGraphicsItem.h  MoldLpp.h  MoldLppGraphicsItem.h  ProjectHome.md  README  RegularTriangulationRemoveVertex.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.qrc  mainwindow.ui
icons/: View.qrc  View.qrc.depends
sample/: CMakeLists.txt  tri.cpp
